Add automatic redirect to hash URL for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tiwari Farma - Supplier, trader of Pharmaceutical Raw Material, Nutraceutical, Chemicals, Excipients & Intermediates" />
     <title>Tiwari Farma - Pharmaceutical Raw Materials & Chemicals</title>
+    <script>
+      // Redirect to hash URL if not already there
+      (function() {
+        if (!window.location.hash) {
+          window.location.replace(window.location.href + '#/');
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
