--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tiwari Farma - Supplier, trader of Pharmaceutical Raw Material, Nutraceutical, Chemicals, Excipients & Intermediates" />
     <title>Tiwari Farma - Pharmaceutical Raw Materials & Chemicals</title>
